# fyta-mcp-server

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.1.1.md  docker-compose.yml  mcp_config_example.json  pyproject.toml  server.py  test_connection.py
docs/: INTEGRATIONS.md  OVERVIEW.md  QUICKSTART.md
examples/: .env.example  DOCKER.md  Dockerfile  README.md  api_wrapper.py  api_wrapper_with_mqtt.py  api_wrapper_with_webhooks.py  docker-compose.yml  mosquitto.conf  requirements.txt
examples/homeassistant/: README.md  automations.yaml  configuration.yaml  lovelace_dashboard.yaml
examples/ip-symcon/: FYTA_UpdateData.php  FYTA_WaterReminder.php  FYTA_WebFront.php  README.md
examples/n8n/: README.md  workflow_basic_monitoring.json
releases/: RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.2.1.md  RELEASE_NOTES_v1.2.2.md  RELEASE_NOTES_v1.2.3.md  RELEASE_NOTES_v1.2.4.md  RELEASE_NOTES_v1.2.5.md  RELEASE_NOTES_v1.2.6.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.3.1.md  RELEASE_NOTES_v1.3.2.md  RELEASE_NOTES_v1.3.3.md  RELEASE_NOTES_v1.3.4.md  RELEASE_NOTES_v1.3.5.md
src/fyta_mcp_server/: __init__.py  __main__.py  client.py  handlers.py  server.py  tools.py
src/fyta_mcp_server/utils/: __init__.py  care_actions.py  dli.py  events.py  fertilization.py  plant_context.py  sensor_info.py  statistics.py  thresholds.py  trends.py  watering.py
tests/: __init__.py  inspect_api_structure.py  test_connection.py  test_diagnose.py
