[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fyta-mcp-server"
version = "0.1.0"
description = "MCP server for FYTA plant sensor data"
authors = [
    {name = "Juergen", email = "your-email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
fyta-mcp-server = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
